--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arbitrary-sum",
-  "version": "1.0.0-1",
+  "version": "1.0.0-2",
   "description": "Provide a simple method for calculating the sum of two numbers without requiring numerical accuracy.",
   "repository": {
     "type": "git",
@@ -35,12 +35,12 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
     "@rollup/plugin-terser": "^0.4.4",
     "jest": "^30.2.0",
     "rollup": "^4.53.5"
   },
   "dependencies": {
-    "@babel/core": "^7.28.5",
-    "@babel/preset-env": "^7.28.5"
   }
 }
